# old-360

./: .gitignore  CMakeLists.txt  cameraworker.cpp  cameraworker.h  gyrocontroller.cpp  gyrocontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  smartcameraview.cpp  smartcameraview.h  stitcher4cam.h  trt_yolo.cpp  trt_yolo.h
